--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "socket.io": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
