--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,6 +6,7 @@
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
+    "react-beautiful-dnd": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "socket.io": "^2.0.4"
